--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.4",
     "@types/react-dom": "^18.0.0",
+    "chance": "^1.1.11",
+    "luxon": "^2.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/chance": "^1.1.6",
+    "@types/luxon": "^2.4.0"
   }
 }
